clusters/my-cluster/oscar-patches/oscar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oscar
  namespace: oscar
  labels:
    app: oscar
spec:
  selector:
    matchLabels:
      app: oscar
  replicas: 1
  template:
    metadata:
      labels:
        app: oscar
    spec:
      serviceAccountName: oscar-sa
      containers:
      - name: oscar
        image: "grycap/oscar:3.6.5"
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      nodeSelector:
        node-role.kubernetes.io/control-plane: ''
