clusters/my-cluster/oscar-patches/oscar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oscar
  namespace: oscar
  labels:
    app: oscar
    monitoring: "true"
spec:
  ports:
    - name: endpoint
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: oscar
