clusters/my-cluster/oscar-patches/oscar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: oscar
  name: oscar
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    -  http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: oscar
              port:
                number: 8080
